deploy/k3s/micro/94-forms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forms-cache
  namespace: blak-micro
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forms-cache
  template:
    metadata:
      labels:
        app: forms-cache
    spec:
      containers:
      - name: forms-cache
        image: valkey/valkey:7.2-alpine
        imagePullPolicy: IfNotPresent
        env: []
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '2'
            memory: 256Mi
        ports:
        - containerPort: 6379
        args:
        - --appendonly
        - 'yes'
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: forms-cache-data
---
apiVersion: v1
kind: Service
metadata:
  name: forms-cache
  namespace: blak-micro
spec:
  selector:
    app: forms-cache
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forms
  namespace: blak-micro
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forms
  template:
    metadata:
      labels:
        app: forms
    spec:
      containers:
      - name: forms
        image: heyform/community-edition@sha256:0758992b3539a83b5ce3df5ad3e1efabc92dec4d46e05c40bbad37381fad69b4
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '2'
            memory: 1Gi
        ports:
        - containerPort: 9157
        volumeMounts:
        - name: data
          mountPath: /app/packages/server/static/upload
        - name: ca
          mountPath: /certs/rootCA.pem
          subPath: rootCA.pem
        - name: frontend
          mountPath: /app/packages/server/view
        readinessProbe:
          httpGet:
            path: /
            port: 9157
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: forms-data
      - name: ca
        configMap:
          name: blak-ca
      - name: frontend
        emptyDir: {}
      - name: themes
        configMap:
          name: blak-app-themes
      hostAliases:
      - ip: 10.43.169.184
        hostnames:
        - id.homelab.local
---
apiVersion: v1
kind: Service
metadata:
  name: forms
  namespace: blak-micro
spec:
  selector:
    app: forms
  ports:
  - port: 9157
    targetPort: 9157
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forms
  namespace: blak-micro
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`forms.homelab.local`)
    services:
    - name: forms
      port: 9157
  tls:
    secretName: blak-wildcard
